fixing alignment of cart items

--- a/src/components/Cart/ButtonQuantity.css
+++ b/src/components/Cart/ButtonQuantity.css
@@ -1,6 +1,8 @@
 .cart-product-quantity {
     display: flex;
     margin-left: 1rem;
+    justify-content: center;
+    align-items: center;
   }
 
   .cart-product-quantity button{
