--- a/src/components/Cart/HeaderCart.css
+++ b/src/components/Cart/HeaderCart.css
@@ -7,12 +7,20 @@
     width: 95%;
     min-height: 9vh;
 }
+
+
 .titleProduct{
     margin-left: 2rem;
-    margin-right: 6rem;
+    margin-right: 4rem;
     }
     
 .content span{
-    width: 240px;
+    width: 290px;
     font-size: 1.3rem;
+    justify-content: center;
+    text-align: center;
     }
+
+.titleTotal{
+    margin-right: 2rem;
+}
